@@ -8,6 +8,7 @@
   <include package=".faceted_year_widget" />
   <include package=".faceted_year_select_widget" />
 
+  <!-- Faceted navigation -->
   <browser:page
     name="faceted-preview-item"
     for="Products.minaraad.interfaces.IAdvisory"
@@ -106,12 +107,20 @@
       />
 
   <browser:page
+      name="theme"
+      for="Products.minaraad.interfaces.ITheme"
+      class="Products.minaraad.browser.theme.ThemeView"
+      template="theme_detail.pt"
+      permission="zope2.View"
+  />
+
+  <browser:page
       for="Products.minaraad.interfaces.IHearing"
       name="attendees_view"
       class=".attendees.AttendeesManagerView"
       permission="zope2.View"
       allowed_interface=".attendees.IAttendeesManagerView"
-    />
+  />
 
   <browser:page
       for="Products.minaraad.interfaces.IMREvent"
