@@ -1,0 +1,122 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="minaraad">
+    <body>
+
+    <hidden fill-slot="content-title">
+    </hidden>
+
+    <hidden fill-slot="content-description">
+    </hidden>
+
+    <metal:block metal:fill-slot="content-core">
+
+        <div class="content-wrapper">
+
+          <div class="jumbotronbar">
+              <div class="container">
+                <div class="column-left">
+                  <div class="col-xs-7 theme-title">
+                    <!-- Wrapper div to vertical align. -->
+                    <div>
+                      <h1 tal:content="context/Title"></h1>
+                    </div>
+                  </div>
+                  <div class="col-xs-5">
+                    <tal:image
+                        tal:define="images context/@@images;
+                        thumbnail python:images.scale('image', width=105, height=105, direction='down')"
+                        tal:condition="thumbnail">
+                      <img tal:attributes="src thumbnail/url; alt context/title" class="img-circle pull-right theme-image" />
+                    </tal:image>
+                  </div>
+                </div>
+                <div class="jumbotron">
+                  <p class="lead" tal:content="context/Description">
+                  </p>
+                </div>
+              </div>
+          </div>
+
+          <!--? TODO: replace breadcurmb with Diazo-->
+          <div class="breadcrumbbar">
+            <div class="container">
+                <ol class="breadcrumb">
+                  <li><a href="home.html"><i class="fa fa-home"></i></a></li>
+                  <li><a href="theme_list.html">Thema’s</a></li>
+                  <li class="active">Biodiversiteit</li>
+                </ol>
+            </div>
+          </div>
+
+          <main role="main" id="main-container">
+
+            <section class="sec-home">
+              <div  class="container">
+                <div class="row masonry">
+
+                  <tal:relatedItems
+                    tal:define="related_items python:context.getRelatedItems();"
+                    tal:repeat="item related_items">
+
+                      <div class="grid-item">
+
+                        <!--? This pattern also lives on homepage. metal:use-macro="" -->
+                        <article class="article-advice">
+                          <a tal:attributes="href item/absolute_url">
+                            <tal:image
+                                tal:define="images item/@@images;
+                                thumbnail python:images.scale('foto', width=648, height=365, direction='down')"
+                                tal:condition="thumbnail">
+                              <img tal:attributes="src thumbnail/url; alt item/title" />
+                            </tal:image>
+                            <div class="body">
+                              <h3 tal:content="item/Title"></h3>
+                              <p class="label">Advies <span>biodiversiteit</span></p>
+                              <p class="truncate" tal:content="item/Description"></p>
+                            </div>
+                          </a>
+                        </article>
+                      </div>
+                  </tal:relatedItems>
+
+
+
+                      <div class="grid-item">
+
+                        <!--? TODO: the same pattern lives on homepage. metal:use-macro="" -->
+                        <div class="list-group list-group-themes">
+
+                          <a tal:repeat="theme view/themes"
+                             tal:attributes="href theme/absolute_url"
+                             class="list-group-item">
+
+                            <tal:image
+                                tal:define="images theme/@@images;
+                                thumbnail python:images.scale('image', width=100, height=100, direction='down')"
+                                tal:condition="thumbnail">
+                              <img tal:attributes="src thumbnail/url; alt theme/title" />
+                            </tal:image>
+
+                            <tal:block tal:replace="theme/title"></tal:block>
+                            <i class="fa fa-angle-right pull-right"></i>
+                          </a>
+
+                        </div>
+                      </div>
+
+                </div>
+              </div>
+            </section>
+
+          </main>
+
+        </div>
+
+    </metal:block>
+    </body>
+</html>
