@@ -47,7 +47,7 @@
                                 <div class="body">
                                   <tal:image
                                       tal:define="images item/@@images;
-                                      thumbnail python:images.scale('image', width=100, height=100, direction='down')"
+                                      thumbnail python:images.scale('image', width=105, height=105, direction='down')"
                                       tal:condition="thumbnail">
                                     <img tal:attributes="src thumbnail/url; alt item/title" />
                                   </tal:image>
