@@ -14,7 +14,7 @@
  <property name="filter_content_types">False</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
- <property name="default_view">folder_listing</property>
+ <property name="default_view">theme</property>
  <property name="view_methods">
   <element value="folder_summary_view"/>
   <element value="folder_full_view"/>
